--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "NestJSStudy",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -48,7 +47,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "webpack": "^5.94.0"
   },
   "jest": {
     "moduleFileExtensions": [
